/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10.2/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the java-library plugin for API and implementation separation.
    `java-library`
    checkstyle
    id("com.github.spotbugs") version "6.2.1"
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use TestNG framework, also requires calling test.useTestNG() below
    testImplementation(libs.testng)
    testImplementation(libs.testcontainers)
    testImplementation(libs.postgresql)
    testImplementation(libs.slf4jdk)

    implementation(libs.slf4j)

    // This dependency is exported to consumers, that is to say found on their compile classpath.
    //api(libs.commons.math3)

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    //implementation(libs.guava)
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

checkstyle {
    toolVersion = "10.26.1"
}

tasks.named<Test>("test") {
    // Use TestNG for unit tests.
    useTestNG()
    systemProperty(
        "java.util.logging.config.file",
        "${projectDir}/src/test/resources/logging.properties"
    )
}
